# soii21-carlos-melara

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  TODO  autogen.sh  bootstrap.sh  configure.ac
doc/: README  references.md
eg/: Makefile.am  README  README.m4  real
eg/abi/: Makefile.m4  README  README.m4  eg-00.c  eg-01.c  eg-02.c  eg-02_pack.c  eg-03.S  eg-03.asm  eg-03_as.S  eg-03_c  eg-03_c.c  eg-04.c  eg-04_64.c  eg-05.c
eg/hw/: Makefile  README  README.m4  TODO  doc.m4  eg-01.hex  eg-02-beta.2.asm  eg-02-beta.asm  eg-02.asm  eg-02.hex  eg-03-beta.S  eg-03-beta.asm  eg-03.S  eg-03.asm  eg-04.asm  eg-04.h  eg-04b.asm  eg-05-beta.1.S  eg-05-beta.2.S  eg-05.S  eg-05.asm  eg-05_utils.c  eg-06-alt.S  eg-06-beta.1.S  eg-06-beta.2.S  eg-06-r16.S  eg-06.S  eg-06_utils.c  eg-07-32bits-beta.ld  eg-07-beta.c  eg-07-beta.ld  eg-07.S  eg-07.c  eg-07.ld  eg-07_utils.c  eg-08.c  eg-08.h  eg-08.ld  eg-09.c  eg-09.h  (+27 more)
eg/make/: Makefile-00  Makefile-01  Makefile-02  Makefile-03  Makefile-04  Makefile-05  Makefile-06  Makefile-07  Makefile-08  Makefile-09  README  circle.c  circle.h  main.c  rectangle.c  rectangle.h  square.c  square.h
eg/mmio/: README  eg-00.S  eg-01.S  eg-01_alpha.S  eg-02.h  eg-02.s  eg-02_utils.c  eg-02_utils.s  eg-03.c  eg-03.s  eg-03_utils.c  eg-03_utils.s  eg-bug.S  egx-01.S  egx-02.S  mbr-nort0.ld  mbr.ld  old.c  old2.c  rt0.c  rt0.s
eg/pitfalls/: README  eg-06.S  egx-01.c  egx-02-16bit.asm  egx-04.c  egx-05.c  egx-05.ld  egx-06.c  egx-07.c
eg/real/: Makefile  eg-00.S  eg-01_buggy.S  eg-02.c  eg-03.c  eg-03.h  eg.c  mbr-nort0.ld  mbr.ld
extra/: Makefile.am  README  readme.m4
extra/make/: Makefile  README  README.m4  bar1.c  bar2.c  foo1.c  foo2.c  foobar.h  main.c  readme.txt
hw/: exc01-so2.txt
m4/: am_conditional.m4  ax_gcc_func_attribute.m4
mbr/: AUTHORS  Makefile.m4  main.c  main.s  mbr.c  mbr.s  rt0.s
mbr-0.1.1/: mbr.h
replace/: README
src/: Makefile.am  debug.h  hex2bin.c  main.sh
test/: Makefile.am  README  stripcomment.am
test/stripcomment/: makefile  makefile.stripped  prog.c  prog.c.stripped
test/stripcomment-test/: prog.c
tools/: Makefile-head-pack  Makefile.am  bintools.m4  bintools.makefile  c-head-pack.c  doc.m4  docm4.am  docm4.m4  makefile.utils  stripcomment-funct.c  stripcomment.c  syseg.c
tools/m4/: make-bintools.m4  short-copyright-notice.m4
try/: Makefile.am  README  README.m4
try/mbr/: Makefile  Makefile.m4  README  README.m4  main.c  mbr.c  mbr.h
try/tos/: Makefile  main.c  mbr.ld  rt0.c  tos.c  tos.h  utils.c
try/tyos/: Makefile.m4  core.c  ext_func.c  ext_func.h  main.c  stage2.c  tyos.c  tyos.h  tyos2.c
tyos/: Makefile  Makefile.m4  stage2.c  tyos.c  tyos.h
tyos-0.1.0/: ext_func.c
